--- a/ejercicio-2-3-3-condicionales/4-arcoiris/index.html
+++ b/ejercicio-2-3-3-condicionales/4-arcoiris/index.html
@@ -5,10 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
+    <main>
+        <div class=" success warning error">
+            <h1 class="title">NOTIFICACIÓN</h1>
+            <p class="text">Mensaje por defecto</p>
+        </div>
+    </main>
+
     <script type="text/javascript" ser="main.js"></script>
 </body>
 
