--- a/ejercicio-2-3-3-condicionales/4-arcoiris/index.html
+++ b/ejercicio-2-3-3-condicionales/4-arcoiris/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <main>
-        <div class=" success warning error">
+        <div class="error">
             <h1 class="title">NOTIFICACIÓN</h1>
             <p class="text">Mensaje por defecto</p>
         </div>
     </main>
 
-    <script type="text/javascript" ser="main.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
