--- a/ejercicios-2-4-eventos/ejercicio-dame-ipsum/index.html
+++ b/ejercicios-2-4-eventos/ejercicio-dame-ipsum/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="js-body">
     <p class="js-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
         labore et dolore
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
