peticiones en paralelo

--- a/ejercicios-2-2-13-peticiones-al-servidor/ejemplo-peticion-servidor-II/index.html
+++ b/ejercicios-2-2-13-peticiones-al-servidor/ejemplo-peticion-servidor-II/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <button class="js-dog">Perretes!!!</button>
+    <button class="js-dog">Enséñame un Chihuahua</button>
     <img />
     <script src="./main.js"></script>
 </body>
