--- a/ejercicio-Repaso-Final-Paletas/index.html
+++ b/ejercicio-Repaso-Final-Paletas/index.html
@@ -12,57 +12,7 @@
 <body>
 
     <h3>Listado de paletas:</h3>
-    <div>
-        <div>
-            <p>A</p>
-            <div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-            </div>
-        </div>
-        <div>
-            <p>A</p>
-            <div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-            </div>
-        </div>
-        <div>
-            <p>A</p>
-            <div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-            </div>
-        </div>
-        <div>
-            <p>A</p>
-            <div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-            </div>
-        </div>
-        <div>
-            <p>A</p>
-            <div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-                <div>B</div>
-            </div>
-        </div>
+    <div class="js-div">
 
     </div>
 
