--- a/ejercicios-2-4-eventos/ejercicios-escuchando-eventos/ejercicio-scroll-colores/index.html
+++ b/ejercicios-2-4-eventos/ejercicios-escuchando-eventos/ejercicio-scroll-colores/index.html
@@ -11,9 +11,150 @@
 
 <body>
     <div class="box box-scroll js-box">
-
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt quisquam, quidem incidunt nisi, tempore
+            blanditiis atque laboriosam vero illum, dolore culpa nemo? Aliquam dolores distinctio accusamus ea cumque.
+            Voluptatum, blanditiis.</p>
+        <p>Quibusdam, ut. Debitis, explicabo eligendi? Nostrum voluptatibus ab, tempora fugit laborum reiciendis tenetur
+            dolorem iste magni quis doloribus reprehenderit ducimus dolor quibusdam quo, illum quas impedit, et fugiat
+            inventore? Dolor.</p>
+        <p>Nulla, reiciendis deserunt veritatis harum quae, possimus ad dolore ea qui excepturi asperiores minus illo
+            eveniet, voluptas tempore atque quas modi quis quasi. Odio reiciendis odit, quos quae laborum hic!</p>
+        <p>Commodi maiores nam quaerat eius? Esse, eius? Amet sit impedit tempore consectetur obcaecati rerum magnam
+            dolore placeat culpa voluptate, voluptatibus voluptatem unde ducimus, aperiam officia soluta libero ab eum
+            molestias.</p>
+        <p>Ipsam et aperiam provident suscipit animi expedita reiciendis culpa. Vero harum ex nam placeat dolores
+            suscipit at laudantium molestiae nihil, provident culpa, cupiditate id fugit quod. Voluptatum inventore
+            quibusdam itaque?</p>
+        <p>Error eius minus sit ratione, numquam repudiandae, esse nisi beatae architecto, tenetur aliquid sapiente!
+            Dignissimos laudantium placeat repudiandae, incidunt aliquid consectetur nesciunt, velit, cupiditate hic
+            fuga debitis magnam dolorem labore.</p>
+        <p>Fugiat necessitatibus architecto facere rerum sunt repudiandae natus placeat quam cum beatae, quisquam
+            eveniet, enim ex magni saepe dicta officiis consequatur iste ipsa minima sed adipisci omnis doloremque.
+            Eveniet, dolores.</p>
+        <p>Doloremque laboriosam harum saepe a dolores quaerat natus nam, consequatur iusto facilis quo esse vitae iure
+            tenetur alias maiores eos neque accusamus! Placeat ea consequuntur cumque qui, ad mollitia adipisci.</p>
+        <p>Possimus nisi distinctio officiis suscipit facilis ea sit perspiciatis mollitia necessitatibus nesciunt animi
+            fugiat doloribus corrupti excepturi dolor illo nobis est qui numquam minus molestias libero, autem, ab
+            tempora. Commodi?</p>
+        <p>A, repellendus aut! Qui aliquid vitae atque magni exercitationem nihil error quae dolorum dolor nobis soluta
+            dolores commodi ex, explicabo amet hic eaque officia fugit at est! Nisi, qui magni!</p>
+        <p>Libero cumque temporibus esse, tenetur aliquam, architecto, assumenda natus voluptate iste optio quidem
+            corrupti! Pariatur sequi ipsam quasi! Dolore odio ducimus totam, laborum a iusto excepturi dolor officia
+            facilis fugiat.</p>
+        <p>Officiis consequuntur obcaecati nostrum sequi quisquam fugiat nulla deserunt ex quis blanditiis, ea, delectus
+            amet? Molestiae odit repellendus, sed recusandae magnam in vitae sint excepturi enim, ullam, quo laboriosam
+            ex?</p>
+        <p>Iusto id modi reprehenderit cupiditate unde, veniam, maiores nulla enim veritatis aliquid sit omnis
+            praesentium magni nobis consectetur. Ut illum vitae et harum unde quasi voluptatem possimus, temporibus odit
+            a!</p>
+        <p>Doloribus eos ipsum ab minima recusandae? Non, culpa harum totam placeat dignissimos vitae! Obcaecati numquam
+            illo ab error sequi dolores aliquid eveniet tenetur, iusto impedit quae, quis nihil perspiciatis provident.
+        </p>
+        <p>Modi, maiores, eum tempora rem maxime vel cumque possimus praesentium sequi ea blanditiis omnis atque aliquam
+            assumenda quisquam distinctio ipsa aut est voluptatum, similique commodi rerum! Quibusdam, veniam officiis!
+            Officia.</p>
+        <p>Repudiandae velit, nulla dolorum nesciunt rerum laboriosam similique reiciendis, soluta aspernatur nisi
+            deleniti ad. Sint enim qui a aliquid obcaecati expedita autem deserunt exercitationem repudiandae similique
+            saepe, doloribus ullam? Dolorem.</p>
+        <p>Nemo adipisci iste quibusdam quaerat, officia repellat nisi, quod perspiciatis expedita quisquam fugiat? Et
+            provident quidem libero perferendis asperiores quo, perspiciatis ad commodi, voluptas harum minus magnam
+            saepe neque esse.</p>
+        <p>Cumque ullam nulla vel quod eligendi saepe explicabo dolores fugiat. Atque reprehenderit quas neque minus.
+            Natus id odio eligendi, dolores explicabo aliquam fuga, vel officia aperiam, recusandae autem voluptatum
+            dicta!</p>
+        <p>Voluptates non, atque totam quibusdam accusamus adipisci distinctio nam placeat nisi, ex similique
+            consequuntur hic? Odit reprehenderit distinctio qui autem, commodi, accusantium dolorum ipsum cum magni
+            labore suscipit. Facilis, ex?</p>
+        <p>Rerum provident sequi omnis vero itaque aperiam laboriosam molestias modi in, a optio officiis obcaecati
+            tenetur? Deleniti quaerat sed laboriosam. Error dolor nam sunt iste quam voluptatum iure eligendi harum.</p>
+        <p>Ex molestiae numquam quo, explicabo maiores voluptatum nam ipsum dolor eligendi enim corrupti minima ullam
+            qui quia, cupiditate quisquam debitis delectus, inventore iste. Aperiam dicta debitis blanditiis pariatur
+            nesciunt magni.</p>
+        <p>Velit tempore sequi expedita dolor voluptatem blanditiis nesciunt commodi. Deserunt alias eaque, dignissimos
+            voluptatum incidunt laudantium placeat vitae perspiciatis repellendus quidem consequatur aliquam sint enim
+            aperiam architecto reiciendis quo ullam.</p>
+        <p>Placeat ipsam deserunt cupiditate doloribus qui aut illum cumque, vitae dolores. Possimus ipsum voluptatem
+            doloribus nisi. Cum officiis dignissimos voluptates repellat fugit itaque aut dolorem quam reprehenderit
+            provident, deleniti veritatis.</p>
+        <p>Rem corrupti deleniti deserunt tempora, autem sed nihil. Voluptates atque necessitatibus quasi ab. Esse
+            quasi, libero earum doloremque fuga nesciunt ipsa voluptates asperiores repellendus ullam totam quaerat sint
+            rem facere?</p>
+        <p>Vero voluptatibus exercitationem consectetur ea molestiae veritatis, harum aliquam facere vitae numquam. Et,
+            harum illum mollitia numquam libero suscipit eveniet consectetur nobis asperiores illo blanditiis itaque
+            doloribus aliquid laborum dolorum!</p>
+        <p>Molestias, perspiciatis harum? Illo suscipit quae, commodi atque sequi nisi ad, necessitatibus natus totam
+            quo excepturi architecto consequatur sit repellat autem error beatae magnam quia minus tempora fugit
+            voluptatem rerum?</p>
+        <p>Facere expedita praesentium beatae? Quasi doloremque ipsam distinctio, velit, itaque ratione perferendis
+            consequuntur quis at incidunt temporibus rerum. Hic dolorum mollitia veniam error voluptatum quisquam magni
+            consectetur natus iure facere!</p>
+        <p>Tenetur, ratione laudantium laborum nam reprehenderit, officiis consequuntur vitae ipsam id iure aperiam
+            quisquam minus porro dolor cumque quidem eveniet odio! Animi ducimus consectetur enim esse aperiam quos quis
+            rem.</p>
+        <p>Voluptas veniam veritatis adipisci ad vero praesentium fugit nam. Maiores, repellendus commodi. Libero
+            ratione, distinctio quas non commodi rerum enim, quam omnis, odio quos est inventore consequuntur eum hic
+            corporis!</p>
+        <p>Eius explicabo tempore error laudantium, iste culpa illum, quasi repellat enim iure repudiandae eligendi
+            fugit facilis? Corrupti ad eius libero quasi sed. Sequi, assumenda nostrum sint facere nihil commodi
+            eligendi.</p>
+        <p>Magnam odit, consequuntur fugiat voluptates, nobis saepe ducimus repellat eius ut quaerat aliquid, eligendi
+            excepturi nesciunt. Modi molestias maxime quod eos quasi ipsum, harum, eum, consectetur veritatis a
+            repellendus nam!</p>
+        <p>Possimus doloribus aspernatur quae voluptatibus debitis. Ex mollitia perferendis quibusdam consequatur nulla
+            itaque quo laborum, harum hic error tempora expedita alias voluptates odit laboriosam fugiat ut nesciunt
+            doloribus nemo sint!</p>
+        <p>Saepe eum laboriosam aliquam molestias ullam voluptatem ipsa vitae tempore mollitia quos! Culpa illum itaque
+            cupiditate magni doloribus ad alias labore molestias fugit vel repellendus consequatur mollitia dolorum,
+            tempora sunt.</p>
+        <p>Magnam vitae maxime dicta voluptatum. Soluta ducimus distinctio exercitationem magnam eos quis, qui aliquid
+            suscipit! Neque harum sed possimus quam? Ad incidunt a unde odit soluta tenetur, labore placeat. Sint!</p>
+        <p>Repellendus accusamus qui nemo labore omnis repudiandae quasi autem animi architecto perspiciatis soluta
+            blanditiis, dignissimos doloremque odit alias, reiciendis temporibus beatae. Ea tempora aliquid delectus
+            ipsum reiciendis possimus nemo deserunt?</p>
+        <p>Eum, dolorum quasi commodi ad dicta quaerat illo nisi cum libero eligendi consequuntur minima. Asperiores
+            molestias porro blanditiis dolore velit sit repellendus fugit voluptatibus, quia deleniti, omnis officiis
+            hic amet!</p>
+        <p>Neque, et rerum esse eaque hic, asperiores eveniet accusantium dignissimos quam modi, iure laudantium.
+            Repudiandae harum, magnam, assumenda mollitia exercitationem quibusdam, voluptates possimus quisquam nisi
+            nam voluptatibus consequuntur repellendus aliquam.</p>
+        <p>Aliquam perferendis vero sequi similique nostrum, voluptas magni facilis corporis quo distinctio accusamus
+            cupiditate nam blanditiis alias nobis! Nisi deserunt, magni amet cumque non consectetur hic! Earum ipsam
+            quidem aspernatur?</p>
+        <p>Quidem dolores iure expedita facere eum ipsa, fugit sit numquam velit ullam, earum illum labore ipsam quod
+            nisi quaerat molestiae incidunt. Assumenda maiores quis ratione beatae dolor corrupti magnam animi!</p>
+        <p>Doloremque minus nam molestias excepturi cum perferendis impedit maiores! Ipsa vel iste a exercitationem
+            omnis placeat quasi velit voluptatum, fugit et. Illum, odio tempora inventore similique laborum ea dolores
+            quam.</p>
+        <p>Hic, consequatur rerum maiores velit harum ut fugit quas fugiat adipisci quasi a unde explicabo dolores quam
+            labore quos dolore assumenda expedita quisquam! Iure inventore explicabo libero recusandae voluptates
+            incidunt.</p>
+        <p>Optio aspernatur, quas harum dolore in exercitationem deserunt totam non incidunt soluta est, eveniet placeat
+            neque error tenetur nulla quia. Pariatur inventore cum laudantium at itaque hic molestiae deleniti dolores.
+        </p>
+        <p>Quidem nesciunt dolores corporis deleniti iste ducimus blanditiis et nam rem! Sit ratione, modi excepturi
+            molestiae vitae deleniti eius. Cupiditate alias voluptates corporis vero aut ducimus vel explicabo,
+            architecto magnam?</p>
+        <p>Quod, dolor! Quas ratione tempora sapiente tempore vel nemo itaque mollitia aut iure! Dolores iste voluptatum
+            odit, error magni recusandae numquam, harum nulla eos ratione eligendi quibusdam sint distinctio rem.</p>
+        <p>Laboriosam velit officiis ratione mollitia minima iusto doloribus quis ut reprehenderit labore amet quasi
+            exercitationem possimus dicta quod asperiores ipsa esse debitis aperiam sed, odit non, illum nam. Corrupti,
+            tempore.</p>
+        <p>Dolores dolorum distinctio facere expedita nam excepturi tenetur iusto voluptate cum earum asperiores vel
+            quibusdam consequuntur dolor hic atque, corporis recusandae nemo culpa quasi, veritatis similique eum
+            voluptatem eaque! Nulla!</p>
+        <p>Cum quo tempora adipisci accusamus doloremque perferendis incidunt, nostrum cupiditate quisquam temporibus in
+            labore exercitationem libero placeat quia, repellat aliquid similique, odit et alias sit eius unde deserunt
+            vel? Facilis.</p>
+        <p>Eveniet dignissimos atque nemo. Aliquid ducimus recusandae similique, veniam dolorem iure assumenda minima
+            perferendis vero quidem numquam perspiciatis? Nostrum, libero ducimus! Ullam voluptatum repellat, sed ipsam
+            culpa doloribus alias aut?</p>
+        <p>Facere odio vitae quis tenetur neque mollitia reprehenderit ipsam illo. Expedita tempore reiciendis mollitia
+            facere obcaecati porro soluta fuga laudantium quaerat aliquam dolore, veniam illum laborum vel adipisci
+            quae? Repudiandae.</p>
+        <p>Ut rem atque voluptate aliquam provident adipisci aspernatur nobis accusantium. Explicabo dolorem nisi
+            necessitatibus. Similique porro commodi minus reprehenderit error, accusantium magnam sed? Ab fugit nulla
+            sequi dolores id aliquam?</p>
     </div>
-
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
